# walkie-talkie

./: .gitignore  .gitmodules  Cargo.toml
audio-stream/: Cargo.toml
audio-stream/examples/: audio-echo.rs
audio-stream/src/: lib.rs  vol_up.rs
audio-stream/src/mic/: mod.rs
audio-stream/src/pcmtypes/: mod.rs
audio-stream/src/speaker/: mod.rs
examples/: audio-echo.rs
src/: chonk.rs  denoise.rs  dummy_streams.rs  fft.rs  generator.rs  lib.rs  main.rs  mic.rs  speaker.rs  vol_up.rs  volume.rs
src/denoise/: mod.rs
src/generator/: dummy_generator.rs  mod.rs
src/mic/: mod.rs
src/pcmtypes/: mod.rs
src/speaker/: mod.rs
