[package]
name = "audio-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.14.2"
futures = { version = "0.3.25", features = ["futures-executor"] }
nnnoiseless = "0.5.1"
tokio = { version = "1.24.1", features = ["full"] }
