[package]
name = "audio-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
cpal = "0.14.2"
crossbeam-channel = "0.5.6"
futures = { version = "0.3.25", features = ["futures-executor"] }
log = "0.4.17"
nnnoiseless = "0.5.1"
tokio = { version = "1.24.1", features = ["full"] }
