[package]
name = "audio-stream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.64"
cpal = "0.14.2"
crossbeam-channel = "0.5.6"
futures = { version = "0.3.25", features = ["futures-executor"] }
nnnoiseless = "0.5.1"
snafu = "0.7.4"
tokio = { version = "1.24.1", features = ["full"] }
tracing = "0.1.37"

# "Intelli"sense screams at us if we have crates specifically for debugging >.>
#[dev-dependencies]
test-log = {version = "0.2.11", default-features = false, features = ["trace"]}
tracing-subscriber = {version = "0.3", default-features = false, features = ["env-filter", "fmt"]}